[package]
name = "infinispan"
version = "0.1.0"
authors = ["David Ortiz <z.david.ortiz@gmail.com>"]
edition = "2018"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.10.10"
http = "0.2.3"
base64 = "0.13.0"
urlencoding = "1.1.1"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
tokio = { version = "0.2", features = ["rt-core", "macros"] }
serial_test = "0.5"
