[package]
edition = "2021"
name = "infinispan"
version = "0.2.0"
description = "Rust client for the Infinispan REST API"
license = "Apache-2.0"
authors = [
    "David Ortiz <z.david.ortiz@gmail.com>",
    "Alejandro Martinez Ruiz <alex@flawedcode.org>",
]
repository = "https://github.com/kuadrant/infinispan-rs"
readme = "README.md"
keywords = ["client", "api", "infinispan", "jboss", "datagrid"]
categories = ["api-bindings"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.11"
http = "0.2"
base64 = "0.13"
urlencoding = "2"
serde_json = "1"
serde = { version = "1", features = ["derive"] }
thiserror = "1"

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
serial_test = "0.5"
